fix(table-with-actions): update styles on mobile version

--- a/src/app/shared/components/table-with-actions/table-with-actions.component.css
+++ b/src/app/shared/components/table-with-actions/table-with-actions.component.css
@@ -9,10 +9,19 @@ mat-card {
 
 mat-card-actions {
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
 }
 
 .mat-mdc-table {
     color: black;
     width: 100%;
+}
+
+.row-mobile {
+    display: flex;
+    justify-content: flex-start;
+}
+
+.row-info {
+    margin-bottom: 0.25em;
 }
